[gd_scene load_steps=4 format=3 uid="uid://on7x7xkovsc8"]

[ext_resource type="Script" path="res://addons/zylann.hterrain/tools/importer/importer_dialog.gd" id="1"]
[ext_resource type="PackedScene" path="res://addons/zylann.hterrain/tools/inspector/inspector.tscn" id="2"]
[ext_resource type="PackedScene" path="res://addons/zylann.hterrain/tools/util/dialog_fitter.tscn" id="3"]

[node name="WindowDialog" type="AcceptDialog"]
title = "Import maps"
size = Vector2i(500, 433)
min_size = Vector2i(500, 380)
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -18.0

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Select maps to import. Leave empty if you don't need some."

[node name="Spacer" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2

[node name="Inspector" parent="VBoxContainer" instance=ExtResource("2")]
layout_mode = 2
size_flags_vertical = 3

[node name="ColorRect" type="ColorRect" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
color = Color(0, 0, 0, 0.417529)

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/ColorRect"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ColorRect/ScrollContainer"]
layout_mode = 2

[node name="Errors" type="Label" parent="VBoxContainer/ColorRect/ScrollContainer/VBoxContainer"]
self_modulate = Color(1, 0.203125, 0.203125, 1)
layout_mode = 2

[node name="Warnings" type="Label" parent="VBoxContainer/ColorRect/ScrollContainer/VBoxContainer"]
self_modulate = Color(1, 0.901428, 0.257813, 1)
layout_mode = 2

[node name="Spacer2" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2

[node name="ButtonsArea" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
mouse_filter = 0
alignment = 1

[node name="CheckButton" type="Button" parent="VBoxContainer/ButtonsArea"]
layout_mode = 2
text = "Check"

[node name="ImportButton" type="Button" parent="VBoxContainer/ButtonsArea"]
layout_mode = 2
text = "Import"

[node name="CancelButton" type="Button" parent="VBoxContainer/ButtonsArea"]
layout_mode = 2
text = "Cancel"

[node name="DialogFitter" parent="." instance=ExtResource("3")]
layout_mode = 3
anchors_preset = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 492.0
offset_bottom = 415.0

[connection signal="property_changed" from="VBoxContainer/Inspector" to="." method="_on_Inspector_property_changed"]
[connection signal="pressed" from="VBoxContainer/ButtonsArea/CheckButton" to="." method="_on_CheckButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonsArea/ImportButton" to="." method="_on_ImportButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonsArea/CancelButton" to="." method="_on_CancelButton_pressed"]
